--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
@@ -26,5 +27,6 @@
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "vue-jest": "^3.0.2"
-  }
+  },
+  "heroku-run-build-script": true
 }
