--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.4.0"
+    "jquery": "^1.9.1",
+    "nuxt": "^2.4.0",
+    "nuxt-imagemin": "^1.0.0",
+    "popper.js": "1.14.7"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
