--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.13",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "jquery": "^1.9.1",
     "nuxt": "^2.4.0",
     "nuxt-imagemin": "^1.0.0",
-    "popper.js": "1.14.7"
+    "popper.js": "1.14.7",
+    "vue": "^2.6.8"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.15.1",
+    "eslint-plugin-nuxt": "^0.4.2",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
     "vue-jest": "^3.0.2"
