--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "jquery": "^1.9.1",
+    "jquery": "^3.3.1",
     "nuxt": "^2.4.0",
     "nuxt-imagemin": "^1.0.0",
     "popper.js": "1.14.7"
@@ -28,6 +28,7 @@
     "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
+    "vue": "^2.6.8",
     "vue-jest": "^3.0.2"
   },
   "heroku-run-build-script": true
