update modal to work with bootstrap-vue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-nexus",
+  "name": "nexus",
   "version": "1.0.0",
   "description": "Nexus Holidays. One stop for all your travel needs. We offer tours to various locations worldwide.",
   "author": "Cavaon",
